--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DisktopReleveNavigation</title>
+  <title>biblio</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!--<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+  <script>
+    // window.nodeRequire = require;
+    window.require = require;
+    // delete window.require;
+    // delete window.exports;
+    // delete window.module;
+</script>
 </head>
 <body>
   <app-root></app-root>
+
 </body>
 </html>
